--- a/.env.production
+++ b/.env.production
@@ -2,18 +2,18 @@ APP_NAME=SmartIPTU
 APP_ENV=local
 APP_KEY=base64:bnoXkzqCL9zOWqJ1nageGEsWLmMj++DvdspgVG2n4uY=
 APP_DEBUG=true
-APP_URL=https://ambienteloteadora.com.br
+APP_URL=http://ambienteloteadora.com.br
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=u752343732_SmartIPTU
+DB_DATABASE=u752343732_smartiptu
 DB_USERNAME=u752343732_admin
-DB_PASSWORD=Ambiente0406#
+DB_PASSWORD=753357Abc
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
